[gd_scene load_steps=16 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/models/firstperson.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/fonts/ClearSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/game_theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/icons/crosshair-ref.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.309804 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="CapsuleMesh" id=3]
radius = 0.09
mid_height = 0.05
radial_segments = 12
rings = 3

[sub_resource type="CapsuleMesh" id=4]
radius = 0.05
mid_height = 0.07
radial_segments = 12
rings = 2

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.119517, 0.206802, 0.601074 )

[sub_resource type="CapsuleShape" id=6]
radius = 0.377257
height = 0.144836

[sub_resource type="SphereShape" id=7]
radius = 0.402868

[sub_resource type="CapsuleShape" id=8]
radius = 0.3
height = 0.556018

[sub_resource type="CapsuleShape" id=9]
radius = 0.35
height = 0.14

[sub_resource type="SphereShape" id=10]
radius = 0.3

[node name="player" type="RigidBody"]
collision_layer = 32800
collision_mask = 32817
mass = 40.0
can_sleep = false
axis_lock_angular_x = true
axis_lock_angular_z = true
angular_damp = 50.0
script = ExtResource( 1 )

[node name="ui" type="Node" parent="."]

[node name="crosshair" type="Control" parent="ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ui/crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 10.0
margin_bottom = 10.0
rect_rotation = 44.9999

[node name="ColorRect2" type="ColorRect" parent="ui/crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 10.0
margin_bottom = 10.0
rect_rotation = -135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="art_panel" type="Panel" parent="ui"]
anchor_left = 0.1
anchor_top = 0.9
anchor_right = 0.9
anchor_bottom = 0.9
margin_top = -170.089
margin_bottom = 0.910767
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="ui/art_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ui/art_panel/vbox"]
margin_right = 799.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
text = "Title"

[node name="Description" type="Label" parent="ui/art_panel/vbox"]
margin_top = 59.0
margin_right = 799.0
margin_bottom = 84.0
theme = ExtResource( 4 )
text = "By VQGAN+CLIP"

[node name="Medium" type="Label" parent="ui/art_panel/vbox"]
margin_top = 88.0
margin_right = 799.0
margin_bottom = 113.0
theme = ExtResource( 4 )
text = "Medium"

[node name="ref_crosshair" type="Control" parent="ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ref_crosshair" type="TextureRect" parent="ui/ref_crosshair"]
margin_top = -22.0
margin_right = 32.0
margin_bottom = 10.0
rect_rotation = 45.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="model" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53, 0 )

[node name="torso" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.295, 0 )

[node name="neck" type="Spatial" parent="torso"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.381891, 0 )

[node name="head_target" type="Spatial" parent="torso/neck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.144083, 0.0804611 )

[node name="head" type="Spatial" parent="torso/neck/head_target"]

[node name="uiCast" type="RayCast" parent="torso/neck/head_target/head"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0.00739932, -0.0380137 )
enabled = true
cast_to = Vector3( 0, 0, -1.5 )
collision_mask = 21

[node name="itemCast" type="RayCast" parent="torso/neck/head_target/head"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0.00739932, -0.0380137 )
enabled = true
cast_to = Vector3( 0, 0, -1.65 )
collision_mask = 25

[node name="camera" type="Camera" parent="torso/neck/head_target/head"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0 )
cull_mask = 1048569
fov = 80.0
far = 2000.0

[node name="head_mesh" type="MeshInstance" parent="torso/neck/head_target/head"]
transform = Transform( -1, 0, -1.50996e-07, 1.50996e-07, -4.37114e-08, -1, 0, -1, 4.37114e-08, -3.55271e-15, -0.0224062, -0.0718808 )
layers = 2
mesh = SubResource( 3 )
material/0 = null

[node name="neck_mesh" type="MeshInstance" parent="torso/neck"]
transform = Transform( -1, 0, -1.50996e-07, 1.50996e-07, -4.37114e-08, -1, 0, -1, 4.37114e-08, -3.55271e-15, -0.0118872, -0.0152082 )
layers = 2
mesh = SubResource( 4 )
material/0 = null

[node name="wallArea" type="Area" parent="torso"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.295, 0 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="torso/wallArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0767169, 1.47501, 0.615619 )
shape = SubResource( 5 )

[node name="col-standing" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.51594, 0.0916411 )
shape = SubResource( 6 )

[node name="col-crouching" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0724, 0.0820826 )
shape = SubResource( 7 )
disabled = true

[node name="col-common" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.578522, 0 )
shape = SubResource( 8 )

[node name="headArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0724, 0.0820826 )
collision_layer = 0

[node name="col-standing2" type="CollisionShape" parent="headArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.44354, 0.0095585 )
shape = SubResource( 9 )

[node name="floorArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.35, 2.84124e-08 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="floorArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.72875e-09, -0.0853038 )
shape = SubResource( 10 )
